# beeweave

./: .env.example  .gitignore  404.html  AGENTS.md  LICENSE  Makefile  README-zh.md  README.md  SETUP.md  index.html  mkdocs.yml  pyproject.toml  setup.sh  sitemap.xml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_or_skill.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  setup.yml
.skills/: README.md
.skills/wiki/beeweave-agent/: SKILL.md
.skills/wiki/beeweave-capture/: SKILL.md
.skills/wiki/beeweave-claude-ingest/: SKILL.md
.skills/wiki/beeweave-codex-ingest/: SKILL.md
.skills/wiki/beeweave-context-pack/: SKILL.md
.skills/wiki/beeweave-copilot-ingest/: SKILL.md
.skills/wiki/beeweave-core/: SKILL.md
.skills/wiki/beeweave-cross-linker/: SKILL.md
.skills/wiki/beeweave-daily-update/: SKILL.md
.skills/wiki/beeweave-dashboard/: SKILL.md
.skills/wiki/beeweave-dedup/: SKILL.md
.skills/wiki/beeweave-digest/: SKILL.md
.skills/wiki/beeweave-export/: SKILL.md
.skills/wiki/beeweave-graph-colorize/: SKILL.md
.skills/wiki/beeweave-hermes-ingest/: SKILL.md
.skills/wiki/beeweave-history-ingest/: SKILL.md
.skills/wiki/beeweave-impl-validator/: SKILL.md
.skills/wiki/beeweave-import/: SKILL.md
.skills/wiki/beeweave-ingest/: SKILL.md
.skills/wiki/beeweave-lint/: SKILL.md
.skills/wiki/beeweave-memory-bridge/: SKILL.md
.skills/wiki/beeweave-openclaw-ingest/: SKILL.md
.skills/wiki/beeweave-pi-ingest/: SKILL.md
.skills/wiki/beeweave-query/: SKILL.md
.skills/wiki/beeweave-rebuild/: SKILL.md
.skills/wiki/beeweave-research/: SKILL.md
.skills/wiki/beeweave-setup/: SKILL.md
.skills/wiki/beeweave-skill-creator/: SKILL.md
.skills/wiki/beeweave-stage-commit/: SKILL.md
.skills/wiki/beeweave-status/: SKILL.md
.skills/wiki/beeweave-switch/: SKILL.md
.skills/wiki/beeweave-synthesize/: SKILL.md
.skills/wiki/beeweave-tag-taxonomy/: SKILL.md
.skills/wiki/beeweave-update/: SKILL.md
.skills/wiki/beeweave-vault-skill-factory/: SKILL.md
.skills/workbench/baoyu-url-to-markdown/: VENDORED.md
.skills/workbench/beeweave-article-illustration/: SKILL.md
.skills/workbench/beeweave-article-publisher/: SKILL.md
.skills/workbench/beeweave-article-writer/: SKILL.md
.skills/workbench/beeweave-ppt-writer/: SKILL.md
.skills/workbench/beeweave-social-writer/: SKILL.md
.skills/workbench/beeweave-url-capture/: SKILL.md
agents/: index.html
architecture/: index.html
beeweave/: __init__.py  __main__.py  ast_extractor.py  batch.py  cache.py  cli.py  external.py  graph_analysis.py  graphrag.py  illustrate_doctor.py  profiles.py  ui.py  uninstall.py  update_notice.py  upgrade.py
bootstrap/: AGENTS.md
bootstrap/claude/: settings.stop-hook.json
cli/: index.html
development/: index.html
docs/: agents.md  architecture.md  cli.md  development.md  flywheel.md  index.md  quickstart.md  self-evolving-writing.md  skills.md
docs/zh/: agents.md  architecture.md  cli.md  development.md  flywheel.md  index.md  quickstart.md  self-evolving-writing.md  skills.md
extensions/brain-capture/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
flywheel/: index.html
quickstart/: index.html
search/: search_index.json
self-evolving-writing/: index.html
skills/: index.html
tests/: test_ast_extractor.py  test_batch.py  test_cache.py  test_cli_skills_layout.py  test_external_skills.py  test_graph_analysis.py  test_graphrag.py  test_illustrate_doctor.py  test_inline_vault_targeting_docs.py  test_okf_same_name_link_roundtrip.py  test_update_notice.py  test_upgrade.py
zh/: index.html
zh/agents/: index.html
zh/architecture/: index.html
zh/cli/: index.html
zh/development/: index.html
zh/flywheel/: index.html
zh/quickstart/: index.html
zh/self-evolving-writing/: index.html
zh/skills/: index.html
(+32 files in other folders)
